--- a/fix_engine/fre_client/client.cfg
+++ b/fix_engine/fre_client/client.cfg
@@ -3,7 +3,7 @@
 ConnectionType=initiator
 FileLogPath=./logs/
 FileStorePath=./sessions/
-DataDictionary=./spec/FIX43.xml
+DataDictionary=../spec/FIX43.xml
 StartTime=00:00:00
 EndTime=23:59:59
 UseDataDictionary=Y
@@ -24,10 +24,10 @@ EncryptMethod=0
 # session definition
 [SESSION]
 BeginString=FIX.4.3
-SenderCompID=FRE_CLIENT_ST290
+SenderCompID=FRE_CLIENT_ST11
 TargetCompID=FRE_SERVER
 HeartBtInt=60
-SocketConnectPort=6510
+SocketConnectPort=6511
 SocketConnectHost=192.168.1.9
 
 
