DONE: 1. From Louis's review last week:    1.1 Fixed SELECT *    1.2 Used F-string    1.3 Deleted test.txt    1.4 Added typing to function header
2. Newly found bugs
   2.1 During Market hours, size or price went to zero. In this case, rejected the order. (Before, the stock could be traded with price or size as 0)
   2.2 IEX data issues:
     2.2.1 LatestVolume is None -> then use previousVolume.
     2.2.2 When high, low are None -> then use week52Low and week52High.
     2.2.3 Generated price and size if price or size missing when market closed.

 3. Enhancement and fixed bugs discussed last week
   3.1 Fixed manual trading execution price logic, will flash out the note or error.
   3.2 Modified portfolios table, calculated Avg_cost and Unrealized PnL.
   3.3 Visualized proportion and PnL in the portfolio page.

--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,7 @@ pandas-market-calendars==1.6.1
 passlib==1.7.2
 patsy==0.5.1
 Pillow==7.2.0
+plotly==4.14.3
 pycparser==2.20
 PyMeeus==0.3.7
 pyparsing==2.4.7
