--- a/requirements.txt
+++ b/requirements.txt
@@ -39,6 +39,7 @@ pyparsing==2.4.7
 python-dateutil==2.8.1
 pytz==2020.1
 requests==2.24.0
+retrying==1.3.3
 scipy==1.5.2
 six==1.15.0
 SQLAlchemy==1.3.18
