--- a/requirements.txt
+++ b/requirements.txt
@@ -41,7 +41,8 @@ pytz==2020.1
 QuantLib==1.22
 requests==2.24.0
 retrying==1.3.3
-scipy==1.5.2
+# scipy==1.5.2
+scipy==1.7.1
 six==1.15.0
 SQLAlchemy==1.3.18
 statsmodels==0.11.1
@@ -54,5 +55,6 @@ WTForms==2.3.3
 yahoo_earnings_calendar==0.6.0
 yfinance==0.1.63
 tqdm==4.62.1
-TA_Lib-0.4.21-cp38-cp38-win_amd64.whl
+# TA_Lib-0.4.21-cp38-cp38-win_amd64.whl
+TA_Lib==0.4.21
 pyportfolioopt==1.4.2
