Finished modifications to earnings_impact.py and added the web crawling functionality

--- a/requirements.txt
+++ b/requirements.txt
@@ -56,3 +56,6 @@ yfinance==0.1.63
 tqdm==4.62.1
 TA_Lib-0.4.21-cp38-cp38-win_amd64.whl
 pyportfolioopt==1.4.2
+
+# BeautifulSoup for web crawling
+beautifulsoup4==4.10.0
