--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+arch==5.1.0
 bcrypt==3.2.0
 blinker==1.4
 cachelib==0.1.1
@@ -22,11 +23,13 @@ holidays==0.10.3
 idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.2
+Keras==2.7.0
 kiwisolver==1.2.0
 korean-lunar-calendar==0.2.1
 MarkupSafe==1.1.1
 matplotlib==3.4.3
 numpy==1.20.1
+pdfkit==1.0.0
 pandas==1.0.5
 pandas-market-calendars==1.6.1
 passlib==1.7.2
@@ -46,6 +49,7 @@ scipy==1.7.1
 six==1.15.0
 SQLAlchemy==1.3.18
 statsmodels==0.11.1
+tensorflow==2.7.0
 texttable==1.6.2
 toolz==0.11.1
 trading-calendars==2.1.0
