Create template for instanace/flask.cfg

--- a/instance/flask_template.cfg
+++ b/instance/flask_template.cfg
@@ -20,7 +20,7 @@ UPLOADS_DEFAULT_URL = 'http://localhost:5000/static/img/'
 UPLOADED_IMAGES_DEST = TOP_LEVEL_DIR + '/project/static/img/'
 UPLOADED_IMAGES_URL = 'http://localhost:5000/static/img/'
 
-MAIL_SERVER = "smtp.googlemail.com"
+MAIL_SERVER = "smtp.abc.com"
 MAIL_PORT = 465
 MAIL_USE_TLS = False
 MAIL_USE_SSL = True
